k8s/clusters/k3sa/manifests/portfolio/stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-stage
  namespace: stage-portfolio
  labels:
    app: stage-portfolio
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: stage-portfolio
  template:
    metadata:
      labels:
        app: stage-portfolio
    spec:
      containers:
        - name: portfolio
          image: ghcr.io/mortennordbye/portfolio:stage
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: {}
